# zip

./: CMakeLists.txt  Makefile  README.md  arg_parsing.c  arg_parsing.h  argparsing.c  argparsing.h  compression.h  defines.h  file_manipulations.c  file_manipulations.h  lz77.c  lz77.h  lz77_compression.c  lz77_compression.h  lz77_decompression.c  lz77_decompression.h  main.c
include/: arg_parsing.h  compress.h  compress_zlib.h  decompress.h  decompress_zlib.h  defines.h  file_manipulations.h
tests/: test.cpp
unzip/: arg_parsing.c  decompress.c  decompress.h  decompress_zlib.c  decompress_zlib.h  main.c
zip/: arg_parsing.c  compress.c  compress.h  compress_zlib.c  compress_zlib.h  main.c
